tests/NormalTests/paczka1/small_fuzzy/23084083.err
Error in line 2: M10a A11 82,4
Error in line 11: fwE A55 42,5
